--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -134,10 +134,6 @@
         }
     }
 
-    &-call {
-        font-size: 32px;
-    }
-
 
 }
 
