--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -7,6 +7,7 @@
     ul {
         display: flex;
         justify-content: center;
+        margin-top: 0;
         margin-bottom: 0;
         
         @each $service, $color in $service-colors {
